Fixed board overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,6 +33,7 @@
 // =================
 	body {
 		margin: 0;
+		padding: 0;
 		font-family: 'Oswald', sans-serif;
 		font-weight: 400;
 	  font-size: 10px;
@@ -47,7 +48,7 @@
 		border: 5px solid black;
 		margin: 0 auto;
 		width: 100em;
-		height: 100em;
+		height: auto;
 	}
 	.center {
 		margin: 100px 8em;
@@ -59,14 +60,14 @@
 		margin: 0 auto;
 		border: 5px dotted black;
 		width: 300px;
-		height: 500px;
+		height: auto;
 		margin-top: 1em;
 	}
 	.cardDraw {
 		margin: 0 auto;
 		border: 5px dotted black;
 		width: 300px;
-		height: 500px;
+		height: auto;
 		margin-bottom: 1em;
 	}
 
